Update contact form and email addresses

--- a/lib/plausible_web/templates/auth/register_success.html.eex
+++ b/lib/plausible_web/templates/auth/register_success.html.eex
@@ -7,6 +7,6 @@
     Didn't recieve an email?
   </div>
   <div class="mt-2 text-sm text-gray-600 leading-tight">
-    Please check your spam folder and contact <a href="mailto:uku@plausible.io">uku@plausible.io</a> if the problem persists
+    Please check your spam folder and contact <a href="mailto:support@plausible.io">support@plausible.io</a> if the problem persists
   </div>
 </div>
