--- a/lib/plausible_web/templates/page/privacy.html.eex
+++ b/lib/plausible_web/templates/page/privacy.html.eex
@@ -1,6 +1,6 @@
 <div class="max-w-md mx-auto py-12 just-text">
 <h1 class="text-xl font-black mb-4">Privacy Policy</h1>
-<p>Your privacy is important to us. It is Plausible Insights' policy to respect your privacy regarding any information we may collect from you across our website, <a href="http://plausible.io">http://plausible.io</a>, and other sites we own and operate.</p>
+<p>Your privacy is important to us. It is Plausible Analytics' policy to respect your privacy regarding any information we may collect from you across our website, <%= link(plausible_url(), to: plausible_url()) %>, and other sites we own and operate.</p>
 <p>We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.</p>
 <p>We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorised access, disclosure, copying, use or modification.</p>
 <p>We don’t share any personally identifying information publicly or with third-parties, except when required to by law.</p>
