--- a/lib/plausible_web/templates/email/check_stats_email.html.eex
+++ b/lib/plausible_web/templates/email/check_stats_email.html.eex
@@ -2,7 +2,7 @@ Hey <%= user_salutation(@user) %>,
 <br /><br />
 Plausible is tracking your website stats without compromising the user experience and the privacy of your visitors.
 <br /><br />
-<%= link("View your Plausible dashboard now", to: "https://plausible.io/") %> for the most valuable traffic insights at a glance.
+<%= link("View your Plausible dashboard now", to: "#{plausible_url()}") %> for the most valuable traffic insights at a glance.
 <br /><br />
 Do reply back to this email if you have any questions or need some guidance.
 <br /></br>
@@ -11,4 +11,4 @@ Uku Taht
 <br /><br />
 --
 <br /><br />
-https://plausible.io
+<%= plausible_url() %>
