--- a/lib/plausible_web/templates/email/trial_one_week_reminder.html.eex
+++ b/lib/plausible_web/templates/email/trial_one_week_reminder.html.eex
@@ -4,10 +4,10 @@ Time flies! Your 30-day free trial of Plausible will end next week.
 <br /><br />
 Over the last three weeks, I hope you got to experience the potential benefits of having website stats in a simple dashboard while respecting the privacy of your visitors, not annoying them with the cookie and privacy notices and still having a fast loading site.
 <br /><br />
-In order to continue receiving valuable website traffic insights at a glance, you’ll need to <%= link("Upgrade your account", to: "https://plausible.io/billing/upgrade") %>.
+In order to continue receiving valuable website traffic insights at a glance, you’ll need to <%= link("Upgrade your account", to: "#{plausible_url()}/billing/upgrade") %>.
 <br /><br />
 If you have any questions or feedback for me, feel free to reply to this email.
 <br /><br />
 Thanks,<br />
 Uku Taht<br />
-https://plausible.io
+<%= plausible_url() %>
