--- a/lib/plausible_web/templates/page/terms.html.eex
+++ b/lib/plausible_web/templates/page/terms.html.eex
@@ -1,7 +1,7 @@
 <div class="max-w-2xl mx-auto leading-normal py-12 just-text">
   <h1 class="text-2xl font-black mb-4">Terms of Service</h1>
   <h3 class="text-lg font-black">1. Terms</h3>
-  <p>By accessing the website at <a href="http://plausible.io">http://plausible.io</a>, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
+  <p>By accessing the website at <%= link(plausible_url(), to: plausible_url()) %>, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
   <h3 class="text-lg font-black">2. Use License</h3>
   <ol type="a" class="list-decimal pl-4">
     <li>Permission is granted to temporarily download one copy of the materials (information or software) on Plausible Insights' website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
