--- a/lib/plausible_web/templates/email/weekly_report.html.eex
+++ b/lib/plausible_web/templates/email/weekly_report.html.eex
@@ -434,7 +434,7 @@ body {
                           <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 5px; padding-left: 5px; padding-top: 5px; padding-bottom: 5px; font-family: Arial, sans-serif"><![endif]-->
                           <div style="color:#555555;font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;line-height:120%;padding-top:5px;padding-right:5px;padding-bottom:5px;padding-left:5px;">
                             <div style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 12px; line-height: 14px; color: #555555;">
-                              <p style="font-size: 14px; line-height: 16px; margin: 0;"><%= referrer[:name] %></p>
+                              <p style="font-size: 14px; line-height: 16px; margin: 0;"><%= referrer["name"] %></p>
                             </div>
                           </div>
                           <!--[if mso]></td></tr></table><![endif]-->
@@ -563,7 +563,7 @@ body {
                           <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 5px; padding-left: 5px; padding-top: 5px; padding-bottom: 5px; font-family: Arial, sans-serif"><![endif]-->
                           <div style="color:#555555;font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;line-height:120%;padding-top:5px;padding-right:5px;padding-bottom:5px;padding-left:5px;">
                             <div style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 12px; line-height: 14px; color: #555555;">
-                              <p style="font-size: 14px; line-height: 16px; margin: 0;"><%= page[:name] %></p>
+                              <p style="font-size: 14px; line-height: 16px; margin: 0;"><%= page["name"] %></p>
                             </div>
                           </div>
                           <!--[if mso]></td></tr></table><![endif]-->
