--- a/lib/plausible_web/templates/billing/change_plan.html.eex
+++ b/lib/plausible_web/templates/billing/change_plan.html.eex
@@ -69,6 +69,20 @@
                   <span x-show="billingCycle === 'yearly'">$24</span>
                 </td>
               </tr>
+              <tr @click="volume = '2m'" :class="{'border-2 border-green-300 bg-green-50': volume === '2m', 'border-b border-gray-200 cursor-pointer': volume !== '1m'}">
+                <td class="px-6 py-4 text-sm leading-5" :class="{'font-bold': volume === '2m'}">2m</td>
+                <td class="px-6 py-4 text-sm leading-5" :class="{'font-bold': volume === '2m'}">
+                  <span x-show="billingCycle === 'monthly'">$69</span>
+                  <span x-show="billingCycle === 'yearly'">$46</span>
+                </td>
+              </tr>
+              <tr @click="volume = '5m'" :class="{'border-2 border-green-300 bg-green-50': volume === '5m', 'border-b border-gray-200 cursor-pointer': volume !== '1m'}">
+                <td class="px-6 py-4 text-sm leading-5" :class="{'font-bold': volume === '5m'}">5m</td>
+                <td class="px-6 py-4 text-sm leading-5" :class="{'font-bold': volume === '5m'}">
+                  <span x-show="billingCycle === 'monthly'">$99</span>
+                  <span x-show="billingCycle === 'yearly'">$66</span>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
